[CAN]Enable CAN compile but not tested
Description of Change:
        1. Add datasheet
        2. add can configuration
Author:
	sxha951@gmail.com
Reviewer:
	sxha951@gmail.com
Test:
	Pass

--- a/docs/0.Start up.md
+++ b/docs/0.Start up.md
@@ -1,4 +1,6 @@
-## Here is the guide to use this project
+## Here is the guide to use this project 
+
+`All descriptions are based on H750`
 
 Due to limited resources, currently only able to maintain a development environment based on Windows. I believe it would be easy to migrate to Linux or MacOS environment.
 
@@ -44,6 +46,10 @@ pyocd flash --target=STM32H750VBTx  --erase=auto --frequency=1000000 build/rtthr
 - `build/rtthread.bin`: The path to the binary file that will be flashed onto the microcontroller
 
 ![image-20241122165800197](./${pics}/image-20241122165800197.png) 
+
+#### Result
+
+![image-20241125152853310](./${pics}/image-20241125152853310.png) 
 
 ### 3. Debug in VSCode
 
