[FDCAN] Add FDCAN2 and it work ok
Description of Change:

Author:
	sxha951@gmail.com
Reviewer:
	sxha951@gmail.com
Test:
	Pass

--- a/docs/2.Way to implement CAN.md
+++ b/docs/2.Way to implement CAN.md
@@ -4,5 +4,130 @@
 
 ## 1.Clock setting
 
+Config clock to 40Mhz, which would be used to calculate BR and Sample rate.
+
+![image-20241128124438033](./${pics}/image-20241128124438033.png) 
+
+![image-20241128124445447](./${pics}/image-20241128124445447.png) 
+
+## 2. IO Config
+
+```c
+/*
+*FDCAN1 GPIO Configuration
+PD0     ------> FDCAN1_RX
+PD1     ------> FDCAN1_TX
+*/
+/*
+*FDCAN2 GPIO Configuration
+PB5     ------> FDCAN2_RX
+PB6     ------> FDCAN2_TX
+*/
+```
 
 
+
+![image-20241128124601245](./${pics}/image-20241128124601245.png) 
+
+![image-20241128124702964](./${pics}/image-20241128124702964.png) 
+
+## 3. Implement drv_fdcan.c
+
+```
+	{CAN500kBaud,   1,16,63,16},
+```
+
+Configure the BR by manual code .
+
+![image-20241128125253106](./${pics}/image-20241128125253106.png) 
+
+## 2. Test CAN currently only normal CAN
+
+```c
+
+int can_test(int argc, char *argv[])
+{
+    struct rt_can_msg msg = {0};
+    rt_err_t res;
+    rt_size_t size;
+    rt_thread_t thread;
+    char can_name[RT_NAME_MAX];
+
+    if (argc == 2)
+    {
+        rt_strncpy(can_name, argv[1], RT_NAME_MAX);
+    }
+    else
+    {
+        rt_strncpy(can_name, CAN_DEV_NAME, RT_NAME_MAX);
+    }
+
+    can_dev = rt_device_find(can_name);
+    if (!can_dev)
+    {
+        rt_kprintf("find %s failed!\n", can_name);
+        return RT_ERROR;
+    }
+    else
+    {
+        rt_kprintf("find %s success!\n", can_name);
+    }
+
+    rt_sem_init(&rx_sem, "rx_sem", 0, RT_IPC_FLAG_FIFO);
+
+    res = rt_device_open(can_dev, RT_DEVICE_FLAG_INT_TX | RT_DEVICE_FLAG_INT_RX);
+    RT_ASSERT(res == RT_EOK);
+
+    thread = rt_thread_create("can_rx", can_rx_thread, RT_NULL, 1024, 25, 10);
+    if (thread != RT_NULL)
+    {
+        rt_thread_startup(thread);
+    }
+    else
+    {
+        rt_kprintf("create can_rx thread failed!\n");
+    }
+
+    msg.id = 0x78;
+    msg.ide = RT_CAN_STDID;
+    msg.rtr = RT_CAN_DTR;
+    msg.len = 8;
+
+    msg.data[0] = 0x00;
+    msg.data[1] = 0x11;
+    msg.data[2] = 0x22;
+    msg.data[3] = 0x33;
+    msg.data[4] = 0x44;
+    msg.data[5] = 0x55;
+    msg.data[6] = 0x66;
+    msg.data[7] = 0x77;
+
+    for (rt_uint8_t send_ind = 0; send_ind < 10; send_ind++)
+    {
+        rt_thread_mdelay(50);
+        msg.id = 0x78 + send_ind + 1;
+        msg.data[0] = msg.data[0] + 0x01;
+        msg.data[1] = msg.data[1] + 0x01;
+        msg.data[2] = msg.data[2] + 0x01;
+        msg.data[3] = msg.data[3] + 0x01;
+        msg.data[4] = msg.data[4] + 0x01;
+        msg.data[5] = msg.data[5] + 0x01;
+        msg.data[6] = msg.data[6] + 0x01;
+        msg.data[7] = msg.data[7] + 0x01;
+
+        size = rt_device_write(can_dev, 0, &msg, sizeof(msg));
+        if (size == 0)
+        {
+            rt_kprintf("can dev write data failed!\n");
+        }
+    }
+
+    return res;
+}
+
+MSH_CMD_EXPORT(can_test, can device sample);
+```
+
+![image-20241128125716372](./${pics}/image-20241128125716372.png) 
+
+**both FDCAN1 & FDCAN2 can work ok!**
