[CANFD]Enable CANFD transmit
Description of Change:

Author:
	sxha951@gmail.com
Reviewer:
	sxha951@gmail.com
Test:
	Pass

--- a/docs/2.Way to implement CAN.md
+++ b/docs/2.Way to implement CAN.md
@@ -131,3 +131,7 @@ MSH_CMD_EXPORT(can_test, can device sample);
 ![image-20241128125716372](./${pics}/image-20241128125716372.png) 
 
 **both FDCAN1 & FDCAN2 can work ok!**
+
+`CANFD` workOK as well
+
+![image-20241128150251233](./${pics}/image-20241128150251233.png) 
