[CANFD]update canfd
Description of Change:

Author:
	sxha951@gmail.com
Reviewer:
	sxha951@gmail.com
Test:
	Pass

--- a/docs/2.Way to implement CAN.md
+++ b/docs/2.Way to implement CAN.md
@@ -135,3 +135,35 @@ MSH_CMD_EXPORT(can_test, can device sample);
 `CANFD` workOK as well
 
 ![image-20241128150251233](./${pics}/image-20241128150251233.png) 
+
+
+
+
+
+
+
+---
+
+### rt-thread BSP中的drv_fdcan.c 的一些改进
+
+- 编译报错, 驱动与主线can.c/h定义的结构体使用有差异
+
+    ![image-20241128153808429](./${pics}/image-20241128153808429.png)
+
+- 完善参数设置
+
+    当前drv_fdcan.c只支持normal CAN的配置，因此只能发送CAN Frame， 如果需要发送CAN FD Frame，还需要额外的设置，由于CANFD的配置是可以兼容CAN的，因此我建议将drv_fdcan.c的配置一并配置完全 
+
+    - 根据FDCAN的时钟来进行 仲裁域的设置，数据域的配置，包括波特率以及采样率, `_stm32_fdcan_NTconfig_t`可以将这个结构体扩充信息，来完成FD的配置
+
+    - 由于HAL库的len长度超过8bytes之后是根据DLC解析的，因此还需要一个len -> DLC的转化函数
+
+- 发送参数的get
+
+    `rt_can_msg`这个结构体里面是有fd_frame的成员的，因此驱动需要跟这个标志为来发送CAN Frame或者 CAN FD Frame
+
+    
+
+    ![image-20241128161014013](./${pics}/image-20241128161014013.png) 
+
+    
